--- a/styling/index.css
+++ b/styling/index.css
@@ -1,129 +1,126 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&family=Tilt+Prism&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&family=Tilt+Prism&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    font-family: 'Special Elite', cursive;
-    font-weight: bolder;
-    font-style: italic;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: "Special Elite", cursive;
+  font-weight: bolder;
+  font-style: italic;
 }
 
 /* Nav Styling */
 .navbar {
-    background: #B20600;
-    color: white !important;
-    margin-bottom: 20px;
+  background: #b20600;
+  color: white !important;
+  margin-bottom: 20px;
 }
 .nav-btns {
-    border: 1px solid white;
-    margin: 10px;
-    
+  border: 1px solid white;
+  margin: 10px;
 }
 .navbar-brand {
-    padding: 5px;
+  padding: 5px;
 }
 
 .logo-img {
-    height: 65px;
-    width: 65px;
+  height: 65px;
+  width: 65px;
 }
 
 /* body and content styling */
 body {
-    background-image: url(https://i.postimg.cc/X79YM02w/stefano-pollio-ZC0-Ebd-LC8-G0-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    object-fit: cover;
+  background-image: url(https://i.postimg.cc/X79YM02w/stefano-pollio-ZC0-Ebd-LC8-G0-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  object-fit: cover;
 }
 
 .hero {
-    height: 85vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: cover;
-    margin-bottom: 20px;
-    color: #B20600;
+  height: 85vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  margin-bottom: 20px;
+  color: #b20600;
 }
 
 .landing {
-    margin-top: 45vh;
-    margin-left: 7vh;
+  margin-top: 45vh;
+  margin-left: 7vh;
 }
 
 .hero-title {
-    font-size: 50px;
+  font-size: 50px;
 }
 
 .hero-text {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 /* card styling */
 .card {
-    background-color: transparent !important;
-    color: #B20600 !important;
-    border-top: 2px solid #B20600;
-    border-right: 2px solid #B20600;
-    border-bottom: none;
-    border-left: none;
-    padding: 10px;
-    border-radius: 20px !important;
-    height: 76vh;
+  background-color: transparent !important;
+  color: #b20600 !important;
+  border-top: 2px solid #b20600;
+  border-right: 2px solid #b20600;
+  border-bottom: none;
+  border-left: none;
+  padding: 10px;
+  border-radius: 20px !important;
+  height: 76vh;
 }
 
 .card-btns {
-    background: white !important;
-    color: #B20600 !important;
-    border-color: #B20600 !important;
+  background: white !important;
+  color: #b20600 !important;
+  border-color: #b20600 !important;
 }
 
 .card-img-top {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 #product-display {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 20px;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 .sellers {
-    color: #B20600;
-    margin-bottom: 10px;
+  color: #b20600;
+  margin-bottom: 10px;
 }
 
 /* footer styling */
 footer {
-    background: #B20600;
-    color: white;
+  background: #b20600;
+  color: white;
 }
 
 .social-links {
-    height: 50px;
-    width: 50px;
-    margin-left: 5px;
-    margin-right: 5px;
+  height: 50px;
+  width: 50px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .footer {
-    display: flex;
-    align-items: center;
-    padding: 10px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
 .footer-text {
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
 }
 
 .footer-p {
-    padding: 5px;
+  padding: 5px;
 }
