--- a/styling/about.css
+++ b/styling/about.css
@@ -24,7 +24,7 @@
 }
 
 .nav-btns:hover {
-  transform: translate(-0.25rem,-0.25rem);
+  transform: translate(-0.25rem, -0.25rem);
   box-shadow: 0.25rem 0.25rem var(--bg);
   background: white !important;
   color: #b20600 !important;
@@ -61,9 +61,11 @@ body {
   margin-bottom: 20px;
 }
 
-.founder {
+#founder {
   width: 90%;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
 }
 .founder-text {
   color: #b20600;
@@ -74,7 +76,6 @@ body {
   padding: 10px;
   margin: 10px;
 }
-
 
 /* testimonials section */
 .testimonial-section {
@@ -142,4 +143,27 @@ footer {
 
 .footer-p {
   padding: 5px;
+}
+
+@media screen and (max-width: 699px) {
+  body {
+    background-image: url(https://i.postimg.cc/vDww7Jjf/pexels-antonio-dillard-4462784-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #founder {
+    display: block !important;
+  }
+  .testimonial-cards {
+    justify-content: center;
+  }
+  .info {
+    width: 100%;
+    text-align: center;
+  }
 }
