more media queries

--- a/styling/admin.css
+++ b/styling/admin.css
@@ -166,3 +166,11 @@ footer {
     align-items: center;
   }
 }
+@media screen and (max-width: 300px){
+  .img-data, .img-head {
+    display: none;
+  }
+  input {
+    margin-bottom: 10px;
+  }
+}
